--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>OpenCV</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -30,7 +31,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>image_transport</build_export_depend>
-  <build_export_depend>OpenCV</build_export_depend>
+  <build_export_depend>OpenCV</build_export_depend> 
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -39,4 +40,5 @@
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>OpenCV</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 </package>
