--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   cv_bridge
   message_generation
+  raspicam_node
+  image_view
 )
 
 find_package(OpenCV REQUIRED)
@@ -58,7 +60,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES guardian_surveillance
-  CATKIN_DEPENDS roscpp rospy sensor_msgs std_msgs message_runtime cv_bridge
+  CATKIN_DEPENDS roscpp rospy sensor_msgs std_msgs cv_bridge message_runtime raspicam_node image_view
 #  DEPENDS system_lib
 )
 
