--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,8 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>OpenCV</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>raspicam_node</build_depend>
+  <build_depend>image_view</build_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -30,4 +32,6 @@
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>OpenCV</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>raspicam_node</exec_depend>
+  <exec_depend>image_view</exec_depend>
 </package>
