--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(guardian_surveillance)
 
-## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
@@ -14,12 +10,12 @@ find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   raspicam_node
   image_view
+  message_generation
 )
 
 find_package(OpenCV REQUIRED)
 
-# find_package(Boost REQUIRED COMPONENTS system)
-
+## Uncomment if the package has a setup.py
 # catkin_python_setup()
 
 ## Generate messages in the 'msg' folder
@@ -29,25 +25,19 @@ find_package(OpenCV REQUIRED)
 #)
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
+add_service_files(
+##  DIRECTORY 
+#  FILES
 #   Service1.srv
 #   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+)
 
 ## Generate added messages and services with any dependencies listed here
-#generate_messages(
+generate_messages(
   #DEPENDENCIES
   #sensor_msgs
   # std_msgs
-#)
+)
 
 ## Generate dynamic reconfigure parameters in the 'cfg' folder
 # generate_dynamic_reconfigure_options(
@@ -58,7 +48,7 @@ find_package(OpenCV REQUIRED)
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES guardian_surveillance
-  CATKIN_DEPENDS roscpp rospy sensor_msgs cv_bridge raspicam_node image_view
+  CATKIN_DEPENDS roscpp rospy sensor_msgs cv_bridge raspicam_node image_view message_runtime
 #  DEPENDS system_lib
 )
 
@@ -67,11 +57,6 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
 )
-
-## Declare a C++ library
-# add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/guardian_surveillance.cpp
-# )
 
 add_executable(intruder_detect_node src/intruder_detect_node.cpp)
 
@@ -90,32 +75,3 @@ catkin_install_python(
   PROGRAMS scripts/email_alert_node
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
-
-## Mark executables for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
-# install(TARGETS ${PROJECT_NAME}_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark libraries for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
-# install(TARGETS ${PROJECT_NAME}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-# )
-
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
-
