implemented and integrated text alerter node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,6 @@ target_link_libraries(intruder_detecter_node
 )
 
 catkin_install_python(
-  PROGRAMS scripts/email_alerter_node
+  PROGRAMS scripts/email_alerter_node scripts/text_alerter_node
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
