--- a/config/user_info.yaml
+++ b/config/user_info.yaml
@@ -1,2 +1,2 @@
-user_phone_number = "+16479663926"
-user_email_address = "joeyyang.ai@gmail.com
+user_phone_number: "+16479663926"
+user_email_address: "joeyyang.ai@gmail.com"
