snapshot to test on new image

--- a/package.xml
+++ b/package.xml
@@ -18,20 +18,20 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>cv_bridge</build_depend>
-  <build_depend>OpenCV</build_depend>
-  <build_depend>raspicam_node</build_depend>
-  <build_depend>image_view</build_depend>
+  <!--<build_depend>OpenCV</build_depend>-->
   <build_depend>message_generation</build_depend>
   <build_depend>std_srvs</build_depend>
-
+  <!--<build_depend>cv_bridge</build_depend>
+  <build_depend>raspicam_node</build_depend>
+  <build_depend>image_view</build_depend>-->
+ 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>cv_bridge</exec_depend>
-  <exec_depend>OpenCV</exec_depend>
-  <exec_depend>raspicam_node</exec_depend>
-  <exec_depend>image_view</exec_depend>
+  <!--<exec_depend>OpenCV</exec_depend>-->
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_srvs</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>raspicam_node</exec_depend>
+  <exec_depend>image_view</exec_depend>
 </package>
