--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,24 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   sensor_msgs
   std_srvs
-  cv_bridge
-  raspicam_node
-  image_view
+  #cv_bridge
+  #raspicam_node
+  #image_view
   message_generation
 )
 
 find_package(OpenCV REQUIRED)
 
 catkin_package(
-  CATKIN_DEPENDS roscpp rospy sensor_msgs std_srvs cv_bridge raspicam_node image_view message_runtime
+  CATKIN_DEPENDS 
+  roscpp 
+  rospy 
+  sensor_msgs 
+  std_srvs 
+  #cv_bridge 
+  #raspicam_node 
+  #image_view 
+  message_runtime
 )
 
 include_directories(
