--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>guardian_surveillance</name>
   <version>0.0.0</version>
-  <description>An intelligent home surveillence system embedded on the Raspberry Pi and implemented in the ROS ecosystem.</description>
+  <description>An intelligent home surveillence system embedded on the Raspberry Pi 4 Model B and implemented in the ROS ecosystem.</description>
 
   <maintainer email="joeyyang.ai@gmail.com">Joey Yang</maintainer>
   <author email="joeyyang.ai@gmail.com">Joey Yang</author>
@@ -18,17 +18,13 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <!--<build_depend>OpenCV</build_depend>-->
   <build_depend>message_generation</build_depend>
   <build_depend>std_srvs</build_depend>
-  <!--<build_depend>cv_bridge</build_depend>
-  <build_depend>raspicam_node</build_depend>
-  <build_depend>image_view</build_depend>-->
+  <build_depend>cv_bridge</build_depend>
  
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-  <!--<exec_depend>OpenCV</exec_depend>-->
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
